syntax = "proto3";
package data;

enum DataModeCache {
  AlwaysInMem = 0;
  AlwaysInFs = 1;
}

enum DataModeDistribute {
  BroadcastRough = 0;
}

message DataMeta{
  DataModeCache cache = 1;
  DataModeDistribute distribute = 2;
}

message DataVersionRequest {
  string unique_id = 1;

  // 0 means require for version
  // >0 means node is compatible with the version's data
  uint64 version = 2; 

  // with value only when first time to get the version
  repeated DataMeta data_metas=3;
}

message DataVersionResponse {
  uint64 version = 1;
}


message WriteOneDataRequest {
  string unique_id = 1;
  uint64 version = 2;

  repeated DataItem data = 3;

  message FileData {
      string file_name = 1;
      bool is_dir =2;
      bytes file_content = 3;
  }

  message DataItem {
      oneof data {
          FileData file = 1;
          bytes raw_bytes = 2;
      }
  }
}

message WriteOneDataResponse {
  uint64 remote_version = 1;
  bool success = 2;
  string message = 3; // Optional: To provide additional info in case of failure
}

