syntax = "proto3";
package kv;

message KeyRange {
  bytes start=1;
  bytes end=2;
}

message KvPair {
  bytes key=1;
  bytes value=2;
}


message KvRequest {
  message KvPutRequest{
    KvPair kv=1;
  }
  message KvGetRequest{
    KeyRange range=1;
  }
  message KvDeleteRequest{
    KeyRange range=1;
  }
  message KvLockRequest{
    bool read_or_write=1;
    repeated uint32 release_id=2;
    KeyRange range=3;
  }
  oneof op {
    KvPutRequest set=1;
    KvGetRequest get=2;
    KvDeleteRequest delete=3;
    KvLockRequest lock=4;
  }
}

message KvPairs{
  repeated KvPair kvs=1;
}

message KvResponse{
  message KvResponse{
    repeated KvPair kvs=1;
  }
  oneof resp {
    KvResponse common_resp=1;
    uint32 lock_id=2;
  }
}

message KvRequests{
  string app=1;
  string func=2;
  repeated KvRequest requests=3;
}

message KvResponses{
  repeated KvResponse responses=1;
}

// message MetaKvRequest{
//   KvRequest request=1;
// }

// message MetaKvResponse{
//   KvResponse response=1;
// }