syntax = "proto3";
package raft;

message VoteRequest {
    uint64 term = 1;
    uint64 candidate_id = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
}

message VoteResponse {
    uint64 term = 1;
    bool vote_granted = 2;
}



message LogEntryPayload {
    

    // bool blank = 1;
    // oneof Normal{
    //     string client = 1;
    //     uint64 serial = 2;
    //     string status = 3;
    // }
    // oneof ConfigChange{
    //     MembershipConfig membership = 1;
    // }
    
}

message LogEntry {
    message MembershipConfig{
        repeated uint64 members = 1;
        bool members_after_consensus_exist=2;
        repeated uint64 members_after_consensus = 3;
    }
    message EntrySnapshotPointer{
        string id = 1;
        MembershipConfig membership = 2;
    }
    message EntryConfigChange{
        MembershipConfig membership = 1;
    }
    message EntryNormal{
        string client = 1;
        uint64 serial = 2;
        string status = 3;
    }
    uint64 term = 1;
    uint64 index = 2;
    oneof payload{
        bool blank = 3;
        EntryNormal normal = 4;
        EntryConfigChange config_change=5;
        EntrySnapshotPointer snapshot_pointer = 6;
    }
}

message AppendEntriesRequest {
    uint64 term = 1;
    uint64 leader_id = 2;
    uint64 prev_log_index = 3;
    uint64 prev_log_term = 4;
    repeated LogEntry entries = 5;
    uint64 leader_commit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
    uint64 conflict_index = 3;
    uint64 conflict_term = 4;
}